# yt-dlp-gui

./: .gitignore  README.md  biome.json  index.html  package.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  download_manager.rs  error.rs  job_runner.rs  lib.rs  main.rs  settings.rs  types.rs  validation.rs  ytdlp.rs  ytdlp_executor.rs  ytdlp_parser.rs
src/api/: client.ts
src/components/: ConfirmModal.tsx  DependencyErrorScreen.tsx  DownloadForm.tsx  DownloadItem.tsx  DownloadQueue.tsx  FoxLogo.tsx  PlaylistView.tsx  SettingsPanel.tsx  SettingsView.tsx  SingleVideoView.tsx  ToolsPanel.tsx
src/constants/: app-info.ts  format-presets.ts
src/hooks/: useDownloads.ts  useFormats.ts  useJobSubscriptions.ts  useSettings.ts  useTauri.ts
src/styles/: common.ts  form-styles.ts
