[package]
name = "yt-dlp-gui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
anyhow = "1"
log = "0.4"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
url = "2"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
parking_lot = "0.12"
