[package]
name = "yt-dlp-gui"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
anyhow = "1"
log = "0.4"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
url = "2"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
parking_lot = "0.12"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
